--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <version>2.0.1</version>
     </parent>
     <artifactId>parsii</artifactId>
-    <version>1.7</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>parsii</name>
     <description>parsii is a super fast and lightweight parser and expression evaluator</description>
