--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,12 @@
     <parent>
         <groupId>com.scireum</groupId>
         <artifactId>sirius-parent</artifactId>
-        <version>3.10</version>
+        <version>5.1</version>
     </parent>
     <artifactId>parsii</artifactId>
-    <version>3.1</version>
+    <version>DEVELOPMENT-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>parsii</name>
     <description>parsii is a super fast and lightweight parser and expression evaluator</description>
     <url>https://github.com/scireum/parsii</url>
-
-    <properties>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-    </properties>
-
 </project>
