--- a/.drone.yml
+++ b/.drone.yml
@@ -13,11 +13,11 @@ platform:
   arch: amd64
 
 clone:
-  depth: 1
+  depth: 100
 
 steps:
   - name: compile
-    image: scireum/sirius-build
+    image: hub.scireum.com/scireum/sirius-build-jdk16:latest
     commands:
       - mvn clean compile
     volumes: *scireum_volumes
@@ -26,7 +26,7 @@ steps:
       - push
 
   - name: test
-    image: scireum/sirius-build
+    image: hub.scireum.com/scireum/sirius-build-jdk16:latest
     commands:
       - mvn clean test
     volumes: *scireum_volumes
@@ -35,7 +35,7 @@ steps:
       - pull_request
 
   - name: sonar
-    image: scireum/sirius-build
+    image: hub.scireum.com/scireum/sirius-build-jdk16:latest
     commands:
       - sed -i 's/DEVELOPMENT-SNAPSHOT/${DRONE_TAG}/g' pom.xml
       - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test sonar:sonar -Dsonar.projectKey=${DRONE_REPO_NAME}
@@ -45,7 +45,7 @@ steps:
         - tag
 
   - name: deploy
-    image: scireum/sirius-build
+    image: hub.scireum.com/scireum/sirius-build-jdk16:latest
     commands:
       - sed -i 's/DEVELOPMENT-SNAPSHOT/${DRONE_TAG}/g' pom.xml
       - mvn clean deploy -DskipTests
